@@ -1,3 +1,6 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.smt.solvertypes;
 
 import java.io.BufferedReader;
@@ -7,7 +10,6 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.settings.SettingsConverter;
 import de.uka.ilkd.key.smt.communication.Z3Socket;
@@ -325,9 +327,9 @@ public class SolverPropertiesLoader {
                     Collection<Properties> props = new ArrayList<>();
                     BufferedReader reader =
                         new BufferedReader(new InputStreamReader(stream, StandardCharsets.UTF_8));
-                    List<String> propsNames = reader.lines().collect(Collectors.toList());
+                    List<String> propsNames = reader.lines().toList();
                     for (String fileName : propsNames.stream().filter(n -> n.endsWith(".props"))
-                            .collect(Collectors.toList())) {
+                            .toList()) {
                         Properties solverProp = new Properties();
                         InputStream propsFile =
                             SolverPropertiesLoader.class.getResourceAsStream(fileName);
